--- a/package.json
+++ b/package.json
@@ -4,20 +4,32 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.7.0",
+    "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.22",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.3",
     "react-google-maps": "^9.4.1",
+    "react-redux": "^5.0.6",
+    "react-redux-firebase": "^1.5.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "recompose": "^0.26.0"
+    "recompose": "^0.26.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^4.13.0",
+    "prettier": "^1.9.2"
   }
 }
