--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^4.7.0",
+    "firebase": "^4.8.1",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.22",
     "prop-types": "^15.6.0",
@@ -20,7 +20,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "trim": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
