--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/Firebase
+node_modules
+flow-typed
+Firebase
 
 # testing
 /coverage
