--- a/package.json
+++ b/package.json
@@ -3,34 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "compression": "^1.7.1",
+    "express": "^4.16.2",
     "firebase": "^4.8.1",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.22",
+    "morgan": "^1.9.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.3",
     "react-google-maps": "^9.4.1",
     "react-redux": "^5.0.6",
-    "react-redux-firebase": "^1.5.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "serve-static": "^1.13.1",
     "trim": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build": "babel lib -d dist",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev:srv": "nodemon lib/index.js --exec babel-node --presets=env",
+    "prd:srv": "node dist/index.js",
+    "precommit": "lint-staged && flow check",
   },
   "devDependencies": {
-    "eslint": "^4.13.0",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-import": "^2.8.0",
+    "flow-bin": "^0.64.0",
+    "flow-typed": "^2.2.3",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.1.0",
+    "nodemon": "^1.14.11",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.10.2"
   }
 }
