--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coffee",
   "version": "0.1.0",
   "private": true,
+  "author": "masaki-sugano",
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.16.2",
@@ -17,6 +18,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6",
@@ -26,13 +28,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "build": "babel lib -d dist",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev:srv": "nodemon lib/index.js --exec babel-node --presets=env",
     "prd:srv": "node dist/index.js",
-    "precommit": "lint-staged && flow check",
+    "precommit": "lint-staged && flow check"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
