--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compression": "^1.7.1",
     "express": "^4.16.2",
     "firebase": "^4.8.1",
+    "junctions": "^0.4.4",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.22",
     "morgan": "^1.9.0",
@@ -15,6 +16,7 @@
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.3",
     "react-google-maps": "^9.4.1",
+    "react-junctions": "^0.4.4",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
