--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/flow-typed
-/Firebase
+node_modules
+flow-typed
+Firebase
 
 # testing
 /coverage
 
 # production
 /build
+dist
 
 # misc
 .DS_Store
@@ -17,6 +18,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+
+# misc
+.DS_Store
 
 npm-debug.log*
 yarn-debug.log*
