--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "author": "masaki-sugano",
+  "lint-staged": {
+    "subTaskConcurrency": 1,
+    "linters": {
+      "*.js": [
+        "prettier-eslint --write",
+        "eslint",
+        "git add"
+      ]
+    }
+  },
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.16.2",
@@ -17,6 +27,7 @@
     "react-dropzone": "^4.2.3",
     "react-google-maps": "^9.4.1",
     "react-junctions": "^0.4.4",
+    "react-modal": "^3.1.12",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
@@ -30,7 +41,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel lib -d dist",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev:srv": "nodemon lib/index.js --exec babel-node --presets=env",
