--- a/package.json
+++ b/package.json
@@ -3,50 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "author": "masaki-sugano",
-  "lint-staged": {
-    "subTaskConcurrency": 1,
-    "linters": {
-      "*.js": [
-        "prettier-eslint --write",
-        "eslint",
-        "git add"
-      ]
-    }
-  },
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.16.2",
     "firebase": "^4.8.1",
+    "g": "^2.0.1",
     "junctions": "^0.4.4",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.22",
+    "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-datepicker": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.3",
     "react-google-maps": "^9.4.1",
     "react-junctions": "^0.4.4",
     "react-modal": "^3.1.12",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-select": "^1.2.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "serve-static": "^1.13.1",
-    "trim": "0.0.1"
+    "trim": "0.0.1",
+    "watchman": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev:srv": "nodemon lib/index.js --exec babel-node --presets=env",
-    "prd:srv": "node dist/index.js",
-    "precommit": "lint-staged && flow check"
+    "prd:srv": "node dist/index.js"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
@@ -58,8 +51,6 @@
     "flow-typed": "^2.2.3",
     "husky": "^0.14.3",
     "lint-staged": "^6.1.0",
-    "nodemon": "^1.14.11",
-    "pre-commit": "^1.2.2",
     "prettier": "^1.10.2"
   }
 }
