--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-ui": "^1.0.0-beta.22",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
+    "pre-commit": "^1.2.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-datepicker": "^1.1.0",
@@ -39,7 +40,8 @@
     "test": "jest react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev:srv": "nodemon lib/index.js --exec babel-node --presets=env",
-    "prd:srv": "node dist/index.js"
+    "prd:srv": "node dist/index.js",
+    "precommit": "lint-staged && flow check"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
@@ -50,6 +52,7 @@
     "flow-bin": "^0.64.0",
     "flow-typed": "^2.2.3",
     "husky": "^0.14.3",
+    "jest": "^22.3.0",
     "lint-staged": "^6.1.0",
     "prettier": "^1.10.2"
   }
