--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
     "react-datepicker": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.3",
+    "react-fontawesome": "^1.6.1",
     "react-google-maps": "^9.4.1",
     "react-junctions": "^0.4.4",
     "react-modal": "^3.1.12",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "react-select": "^1.2.1",
+    "react-slick": "^0.20.0",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "serve-static": "^1.13.1",
+    "slick-carousel": "^1.8.1",
     "trim": "0.0.1",
     "watchman": "^1.0.0"
   },
